crates/parser/tests/parser/snapshots/main__parser__fixtures__function_def.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: add
      visibility: Private
      type_params: []
      params:
        - name: a
          ty:
            Named:
              name: Int
              span:
                - 24
                - 27
          mode: Consume
          span:
            - 21
            - 27
        - name: b
          ty:
            Named:
              name: Int
              span:
                - 32
                - 35
          mode: Consume
          span:
            - 29
            - 35
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 40
            - 43
      body:
        BinaryOp:
          op: Add
          lhs:
            Var:
              name: a
              span:
                - 46
                - 47
          rhs:
            Var:
              name: b
              span:
                - 50
                - 51
          span:
            - 46
            - 51
      doc: ~
      span:
        - 13
        - 51
  - DefFn:
      platform: ~
      name: greet
      visibility: Private
      type_params: []
      params:
        - name: name
          ty:
            Named:
              name: String
              span:
                - 68
                - 74
          mode: Consume
          span:
            - 62
            - 74
      constraints: []
      return_type:
        Named:
          name: String
          span:
            - 79
            - 85
      body:
        Do:
          exprs:
            - Let:
                name: msg
                ty: ~
                value:
                  Lit:
                    value:
                      String: hello
                    span:
                      - 102
                      - 109
                body: ~
                span:
                  - 92
                  - 109
            - Var:
                name: msg
                span:
                  - 115
                  - 118
          span:
            - 86
            - 120
      doc: ~
      span:
        - 52
        - 120
