crates/parser/tests/parser/snapshots/main__parser__fixtures__if_expr.snap
---
source: crates/parser/tests/fixture_test.rs
assertion_line: 28
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: abs
      visibility: Private
      type_params: []
      params:
        - name: x
          ty:
            Named:
              name: Int
              span:
                - 24
                - 27
          span:
            - 21
            - 27
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 32
            - 35
      body:
        If:
          cond:
            BinaryOp:
              op: Gt
              lhs:
                Var:
                  name: x
                  span:
                    - 41
                    - 42
              rhs:
                Lit:
                  value:
                    Int: 0
                  span:
                    - 45
                    - 46
              span:
                - 41
                - 46
          then_:
            Var:
              name: x
              span:
                - 49
                - 50
          else_:
            UnaryOp:
              op: Neg
              operand:
                Var:
                  name: x
                  span:
                    - 61
                    - 62
              span:
                - 60
                - 62
          span:
            - 38
            - 64
      span:
        - 13
        - 64
  - DefFn:
      platform: ~
      name: positive
      visibility: Private
      type_params: []
      params:
        - name: x
          ty:
            Named:
              name: Int
              span:
                - 81
                - 84
          span:
            - 78
            - 84
      constraints: []
      return_type:
        Named:
          name: Bool
          span:
            - 89
            - 93
      body:
        If:
          cond:
            BinaryOp:
              op: Gt
              lhs:
                Var:
                  name: x
                  span:
                    - 99
                    - 100
              rhs:
                Lit:
                  value:
                    Int: 0
                  span:
                    - 103
                    - 104
              span:
                - 99
                - 104
          then_:
            Lit:
              value:
                Bool: true
              span:
                - 107
                - 111
          else_:
            Lit:
              value:
                Bool: false
              span:
                - 121
                - 126
          span:
            - 96
            - 128
      span:
        - 65
        - 128
