crates/parser/tests/parser/snapshots/main__parser__fixtures__lambda.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: apply
      visibility: Private
      type_params: []
      params:
        - name: f
          ty:
            Fn:
              params:
                - mode: Consume
                  ty:
                    Named:
                      name: Int
                      span:
                        - 27
                        - 30
              ret:
                Named:
                  name: Int
                  span:
                    - 35
                    - 38
              span:
                - 26
                - 38
          mode: Consume
          span:
            - 23
            - 38
        - name: x
          ty:
            Named:
              name: Int
              span:
                - 43
                - 46
          mode: Consume
          span:
            - 40
            - 46
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 51
            - 54
      body:
        App:
          func:
            Var:
              name: f
              span:
                - 57
                - 58
          args:
            - Var:
                name: x
                span:
                  - 59
                  - 60
          is_ufcs: false
          span:
            - 57
            - 61
      span:
        - 13
        - 61
  - DefFn:
      platform: ~
      name: inc
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Fn:
          params:
            - mode: Consume
              ty:
                Named:
                  name: Int
                  span:
                    - 76
                    - 79
          ret:
            Named:
              name: Int
              span:
                - 84
                - 87
          span:
            - 75
            - 87
      body:
        Lambda:
          params:
            - name: x
              ty: ~
              mode: Consume
              span:
                - 90
                - 91
          body:
            BinaryOp:
              op: Add
              lhs:
                Var:
                  name: x
                  span:
                    - 95
                    - 96
              rhs:
                Lit:
                  value:
                    Int: 1
                  span:
                    - 99
                    - 100
              span:
                - 95
                - 100
          span:
            - 90
            - 100
      span:
        - 62
        - 100
  - DefFn:
      platform: ~
      name: add_pair
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Fn:
          params:
            - mode: Consume
              ty:
                Named:
                  name: Int
                  span:
                    - 120
                    - 123
            - mode: Consume
              ty:
                Named:
                  name: Int
                  span:
                    - 125
                    - 128
          ret:
            Named:
              name: Int
              span:
                - 133
                - 136
          span:
            - 119
            - 136
      body:
        Lambda:
          params:
            - name: a
              ty: ~
              mode: Consume
              span:
                - 140
                - 141
            - name: b
              ty: ~
              mode: Consume
              span:
                - 143
                - 144
          body:
            BinaryOp:
              op: Add
              lhs:
                Var:
                  name: a
                  span:
                    - 149
                    - 150
              rhs:
                Var:
                  name: b
                  span:
                    - 153
                    - 154
              span:
                - 149
                - 154
          span:
            - 139
            - 154
      span:
        - 101
        - 154
