crates/parser/tests/parser/snapshots/main__parser__fixtures__let_type_annotation.snap
---
source: crates/parser/tests/fixture_test.rs
assertion_line: 28
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: annotated
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 32
            - 35
      body:
        Do:
          exprs:
            - Let:
                name: x
                ty:
                  Named:
                    name: Int
                    span:
                      - 49
                      - 52
                value:
                  Lit:
                    value:
                      Int: 5
                    span:
                      - 55
                      - 56
                body: ~
                span:
                  - 42
                  - 56
            - Var:
                name: x
                span:
                  - 62
                  - 63
          span:
            - 36
            - 65
      span:
        - 13
        - 65
