crates/parser/tests/parser/snapshots/main__parser__fixtures__literals.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: test_int
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 31
            - 34
      body:
        Lit:
          value:
            Int: 42
          span:
            - 37
            - 39
      doc: ~
      span:
        - 13
        - 39
  - DefFn:
      platform: ~
      name: test_float
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Named:
          name: Float
          span:
            - 60
            - 65
      body:
        Lit:
          value:
            Float: 3.14
          span:
            - 68
            - 72
      doc: ~
      span:
        - 40
        - 72
  - DefFn:
      platform: ~
      name: test_bool
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Named:
          name: Bool
          span:
            - 92
            - 96
      body:
        Lit:
          value:
            Bool: true
          span:
            - 99
            - 103
      doc: ~
      span:
        - 73
        - 103
  - DefFn:
      platform: ~
      name: test_string
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Named:
          name: String
          span:
            - 125
            - 131
      body:
        Lit:
          value:
            String: hello
          span:
            - 134
            - 141
      doc: ~
      span:
        - 104
        - 141
  - DefFn:
      platform: ~
      name: test_unit
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type:
        Named:
          name: Unit
          span:
            - 161
            - 165
      body:
        Lit:
          value: Unit
          span:
            - 168
            - 170
      doc: ~
      span:
        - 142
        - 170
